# bangkok-aqi-pipeline

./: .dockerignore  .env.example  .gitignore  .goreleaser.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  COMMUNITY.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  INTERVIEW_CHEATSHEET.md  INTERVIEW_PREP_CHECKLIST.md  LICENSE  Makefile  PRESENTATION.md  PRESENTATION_SLIDES.md  PROJECT_SUMMARY.md  README.md  SECURITY.md  VISUAL_SUMMARY.md  deploy_azure.sh  docker-compose.yml  pyproject.toml  requirements.txt
.github/: ACTIONS_SETUP.md  PULL_REQUEST_TEMPLATE.md  SETUP_GUIDE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy.yml  release.yml
.streamlit/: config.toml
airflow/: Dockerfile
airflow/dags/: aqi_hourly.py
app/: Dockerfile  dashboard.py  dashboard_bq.py  requirements.txt
dags/: bangkok_aqi_pipeline.py
dashboard/: app.py
data/raw/: air_quality_20251004T122730Z.json  air_quality_20251004T123335Z.json  air_quality_20251004T123631Z.json  weather_20251004T122729Z.json  (+2 more)
dbt/: .user.yml  README.md  dbt_project.yml  profiles.yml  requirements.txt
docs/: architecture.md
spark/: README.md  cleanse.py  job_config.json
sql/: 00_create_schemas.sql  10_stg_weather.sql  11_stg_air_quality.sql  20_dim_datetime.sql  30_fct_aqi_by_hour.sql  40_mart_daily_aqi_weather.sql
src/: __init__.py  config.py  ingest_air_quality.py  ingest_weather.py  load_to_duckdb.py  pipeline.py  run_sql.py  tests.py
tests/: __init__.py  test_alerts.py  test_basic.py  test_dag.py  test_dashboard.py  test_extract.py
(+67 files in other folders)
